--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,17 @@
+:root {
+  --main-bg-color: royalblue;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
   margin: auto;
   max-width: 38rem;
   padding: 2rem;
+}
+
+.button {
+  background-color: var(--main-bg-color);
+  color: white;
+  font-size: 1.2rem;
+  width: fit-content;
 }
