--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,28 @@
 :root {
-  --main-bg-color: royalblue;
+  --main-bg-color: #white;
   --sidebar-bg-color-lighter: #3e465b;
   --sidebar-bg-color: #293249;
   --sidebar-bg-color-darker: #1c2333;
   --sidebar-bg-color-darkest: #141924;
-	--sidebar-text-color-lightest: #fff;
-	--sidebar-text-color-lighter: #e6e6e6;
-	--sidebar-text-color: #dcdcdc;
-	--sidebar-text-color-darker: #bbb;
-	--sidebar-text-color-darkest: #999;
+  --sidebar-text-color-lightest: #fff;
+  --sidebar-text-color-lighter: #e6e6e6;
+  --sidebar-text-color: #dcdcdc;
+  --sidebar-text-color-darker: #bbb;
+  --sidebar-text-color-darkest: #999;
 }
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-  margin: auto;
-  max-width: 38rem;
-  padding: 2rem;
+  margin: 0px;
+  background-color: var(--main-bg-color);
+}
+
+.divider {
+	border-left: 0;
+	border-bottom: 0;
+	border-right: 0;
+	border-top: 1px solid rgba(167, 179, 233, 0.568);
+	width: 100%;
 }
 
 .button {
