--- a/src/taskDetails.css
+++ b/src/taskDetails.css
@@ -29,8 +29,7 @@
 }
 
 .taskDetailsTitle{
-	color: var(--sidebar-text-color);
-	font-size: 14pt;
+	color: var(--sidebar-text-color-lighter);
 	margin: 25px 20px;
 	margin-bottom: 35px;
 }
@@ -39,18 +38,23 @@
 	display: inline;
 }
 
-.taskDetailsTitleText{
+.taskDetailsTitleForm{
 	display: inline;
 	margin-left: 10px;
-	font-weight: bold;
 }
 
-/*
- * .taskDetailsTitleImportant{
- *   display: inline;
- *   float: right;
- * }
- */
+.taskDetailsTitleInput{
+	display: inline;
+	background-color: inherit;
+	color: var(--sidebar-text-color-lighter);
+	font-weight: bold;
+	font-size: 14pt;
+	padding: 10px;
+	width: calc(100% - 60px);
+	outline: none;
+	border: none;
+}
+
 
 .taskDetailsSubtasks{
 	margin: 0px 20px;
@@ -59,23 +63,15 @@
 }
 
 
-/* TODO */
-.taskDetailsSubtask{
-	/* height: 30px; */
-	/* margin: 10px 0px; */
-	/* color: var(--sidebar-text-color); */
-}
-
-/* TODO */
-
 .taskDetailsSubtaskComplete{
 	float: left;
 	position: relative;
-	top: 9px;
+	top: 7px;
 }
 .taskDetailsSubtaskTitleForm{
 	height: 100%;
-	width: calc(100% - 15px - 15px - 40px);
+
+	width: calc(100% - 85px);
 	margin: 0px 10px;
 	margin-bottom: 8px;
 	float: left;
@@ -83,18 +79,18 @@
 .taskDetailsSubtaskDelete{
 	float: right;
 	position: relative;
-	top: 9px;
+	top: 7px;
 }
 
-
-.taskDetailsSubtaskText{
-	/* margin: 0 10px; */
-	/* display: inline-block;  */
-}
 
 .taskDetailsSubtaskTitleInput{
 	color: var(--sidebar-text-color-lighter);
 	height: 15px;
+}
+
+.taskDetailsSubtaskTitleInputCompleted,
+.taskDetailsTitleInputCompleted{
+	color: var(--sidebar-text-color-darkest);
 }
 
 .taskDetailsSubtaskSeparator{
@@ -103,20 +99,12 @@
 	height: 1px;
 	width: 100%;
 	border: none;
-	/* margin: 10px 0px; */
 }
 
 
-
-.taskDetailsNewSubtask{
-	/* display: flex; */
-}
-
-/* todo somehow make the input and the plus icon nicely share the width? */
 .taskDetailsNewSubtaskForm{
 	display: inline;
 	float: left;
-	/* -15 because icons are 15px wide, 40px for extra margin around the icon */
 	width: calc(100% - 15px - 40px);
 }
 
@@ -144,12 +132,14 @@
 }
 
 .taskDetailsNewSubtaskInput:hover,
-.taskDetailsSubtaskTitleInput:hover{
+.taskDetailsSubtaskTitleInput:hover,
+.taskDetailsTitleInput:hover{
 	background-color: var(--sidebar-bg-color-darker);
 }
 
 .taskDetailsNewSubtaskInput:focus,
-.taskDetailsSubtaskTitleInput:focus{
+.taskDetailsSubtaskTitleInput:focus,
+.taskDetailsTitleInput:focus{
 	background-color: var(--sidebar-bg-color-darkest);
 	color: var(--sidebar-text-color-lightest);
 }
@@ -158,7 +148,7 @@
 	color: var(--sidebar-text-color-darker);
 	display: inline;
 	float: right;
-	height: 30px;
+	height: 20px;
 	padding: 15px 0px;
 }
 
