Adding tasks added

--- a/src/taskListView.css
+++ b/src/taskListView.css
@@ -1,7 +1,8 @@
 /*
  * To-Do Plus
- * taskDetails.css
- * @author: Michaela Pařilová(xparil04
+ * taskListView.css
+ * @author: Michaela Pařilová(xparil04)
+   TODO: sjednotit hlavicky :)
  */
 
  :root{
