--- a/src/taskListView.css
+++ b/src/taskListView.css
@@ -70,11 +70,15 @@
 	background-color: rgba(41, 50, 73, 1.0);
 }
 
+.taskListViewBg .inputContainer .icon .hiddenButton{
+	border: none;
+	cursor: pointer;
+}
+
 .taskListViewBg .inputContainer .icon{
 	float: left;
 	display: inline;
 	padding-right: 10px;
-	cursor: pointer;
 	font-size: 1.13em;
 }
 
