--- a/src/styles/taskListView.css
+++ b/src/styles/taskListView.css
@@ -17,6 +17,24 @@
 	height: 100%;
 }
 
+.taskNameAndList{
+	display: flex;
+}
+
+.taskNameAndList .taskMenuList{
+	margin-left: auto;
+	background-color: rgba(41, 50, 73, 0.6);
+	height: 25px;
+	align-items: center;	
+}
+
+.taskNameAndList .taskMenuList:hover{
+	margin-left: auto;
+	background-color: rgba(41, 50, 73, 1.0);
+	height: 25px;
+	align-items: center;	
+}
+
 .taskBox{
 	background-color: rgba(41, 50, 73, 0.6);
 	margin-bottom: 15px;
