Task importance icon fixed

--- a/src/styles/taskListView.css
+++ b/src/styles/taskListView.css
@@ -93,6 +93,10 @@
 	color: var(--sidebar-text-color-darkest);
 }
 
+.taskBox  .buttonSetImportance .taskImportanceIcon{
+	color: goldenrod;
+}
+
 .taskListViewBg .inputContainer{
 	display: flex;              
     bottom:0; 
