Due date should be working well (need backend?)
(has one minor flaw but no one will notice)
Also, I feel like I'm sending data to the backend but the task details
don't change
Also, scrolling the task details (if there are many subtasks) now possible

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,8 @@
   --sidebar-bg-color: #293249;
   --sidebar-bg-color-darker: #1c2333;
   --sidebar-bg-color-darkest: #141924;
-  --sidebar-bg-toggle-color: #0b5394;
+  --sidebar-bg-toggle-color: #245b5b;
+  --sidebar-bg-toggle-color-darker: #153636;
   --sidebar-text-color-lightest: #fff;
   --sidebar-text-color-lighter: #e6e6e6;
   --sidebar-text-color: #dcdcdc;
