Added the lower bar in task details
(Showing date created and a button for deleting the task. Button not yet
working)

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 :root {
   --main-bg-color: #white;
+  --sidebar-bg-color-lightest: #9ea2ad;
   --sidebar-bg-color-lighter: #3e465b;
   --sidebar-bg-color: #293249;
   --sidebar-bg-color-darker: #1c2333;
