--- a/src/styles/taskListView.css
+++ b/src/styles/taskListView.css
@@ -11,10 +11,19 @@
 	color: var(--sidebar-text-color-lightest);
 }
 
+.taskListLayout {
+	display: flex;
+	flex-direction: row;
+	height: 100%;
+	margin-right: -12px;
+}
+
 .taskListPage{
 	display: flex;
 	flex-direction: column;
 	height: 100%;
+	margin-right: 12px;
+	flex-grow: 2;
 }
 
 .taskNameAndList{
