--- a/src/styles/taskListView.css
+++ b/src/styles/taskListView.css
@@ -140,3 +140,13 @@
 	font-size: 16px;
 	height: 25px;
 }
+
+.taskListPage .taskNameAndList .taskTitleRenameBox .taskFormBox input{
+	color: white;
+	background-color: rgba(41, 50, 73, 0.0);
+	border: none;
+	font-size: 38px;
+	font-weight: bold;
+	display: flex;
+
+}
