--- a/src/styles/taskListView.css
+++ b/src/styles/taskListView.css
@@ -139,6 +139,12 @@
 	flex-direction: column;
 	font-size: 16px;
 	height: 25px;
+	outline: none;
+}
+
+.taskListPage .taskNameAndList .taskTitleRenameBox .taskFormBox{
+	width: fit-content;
+	align-items: stretch;
 }
 
 .taskListPage .taskNameAndList .taskTitleRenameBox .taskFormBox input{
@@ -149,8 +155,10 @@
 	font-weight: bold;
 	margin-bottom: 20px;
 	margin-top: 20px;
-
+	outline: none;
+	width: 100%;
 }
+
 
 input, select, textarea{
     color: white;
