--- a/src/styles/taskListView.css
+++ b/src/styles/taskListView.css
@@ -32,16 +32,23 @@
 
 .taskNameAndList .taskMenuList{
 	margin-left: auto;
-	background-color: rgba(41, 50, 73, 0.6);
-	height: 25px;
 	align-items: center;	
 }
 
-.taskNameAndList .taskMenuList:hover{
-	margin-left: auto;
-	background-color: rgba(41, 50, 73, 1.0);
-	height: 25px;
-	align-items: center;	
+.taskNameAndList .taskMenuList button{
+	border: none;
+	background-color: rgba(41, 50, 73, 0.6);
+	height: 30px;
+	text-align: center;
+	color: white;	
+	font-size: 25px;
+	padding: 0 20px;
+	font-weight: bold;
+	border-radius: 10px;
+}
+
+.taskNameAndList .taskMenuList button:hover{
+	background-color: rgba(41, 50, 73, 1.0);	
 }
 
 .taskBox{
