--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -6,7 +6,7 @@
 
 .layout .sidebar {
     background-color: var(--sidebar-bg-color);
-    height: calc(100vh - 24px);
+    min-height: calc(100vh - 24px);
     width: 180px;
     display: block;
     top: 0;
