--- a/src/index.css
+++ b/src/index.css
@@ -51,3 +51,26 @@ body {
   font-size: 1.2rem;
   width: fit-content;
 }
+
+.error-wrapper {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: var(--sidebar-bg-color-darkest);
+}
+
+.error-message-wrapper {
+	position: fixed;
+	top: 25%;
+	width: 100%;
+}
+
+.error-message {
+	font-size: 20pt;
+	margin: auto;
+	text-align: center;
+  width: 100%;
+  padding-top: 100px;
+}
