--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,8 @@
   --sidebar-bg-color: #293249;
   --sidebar-bg-color-darker: #1c2333;
   --sidebar-bg-color-darkest: #141924;
-  --sidebar-bg-toggle-color: #245b5b;
-  --sidebar-bg-toggle-color-darker: #153636;
+  --sidebar-bg-toggle-color: #33448fc5;
+  --sidebar-bg-toggle-color-darker: #2b3875e5;
   --sidebar-text-color-lightest: #fff;
   --sidebar-text-color-lighter: #e6e6e6;
   --sidebar-text-color: #dcdcdc;
