Added a button to the task list to 'add to my day'

--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,11 @@
   --sidebar-bg-color: #293249;
   --sidebar-bg-color-darker: #1c2333;
   --sidebar-bg-color-darkest: #141924;
+  --sidebar-bg-toggle-color-lightest: #99a1c7;
+  --sidebar-bg-toggle-color-lighter: #5b69a5;
   --sidebar-bg-toggle-color: #33448fc5;
   --sidebar-bg-toggle-color-darker: #2b3875e5;
+  --sidebar-bg-toggle-color-darkest: #283672;
   --sidebar-text-color-lightest: #fff;
   --sidebar-text-color-lighter: #e6e6e6;
   --sidebar-text-color: #dcdcdc;
