--- a/src/styles/taskListView.css
+++ b/src/styles/taskListView.css
@@ -212,7 +212,8 @@
 	width: 100%;
 }
 
-.taskListPage .taskNameAndList .taskTitleRenameBox .taskFormBox{
+.taskListPage .taskNameAndList .taskTitleRenameBox .taskFormBox,
+.taskListPage .taskTitleRenameBox .taskFormBox {
 	width: fit-content;
 	align-items: stretch;
 	width: 100%;
@@ -228,6 +229,22 @@
 	margin-top: 20px;
 	outline: none;
 	width: 100%;
+}
+
+.taskListPage .taskTitleRenameBox .taskFormBox input{
+	color: white;
+	background-color: rgba(41, 50, 73, 0.0);
+	border: none;
+	font-size: 16px;
+	font-weight: bold;
+	margin-bottom: 1.33em;
+	margin-top: 1em;
+	outline: none;
+	width: 100%;
+}
+
+.taskListPage .taskTitleRenameBox .taskFormBox input::placeholder{
+	color: white;
 }
 
 
