--- a/src/styles/taskListView.css
+++ b/src/styles/taskListView.css
@@ -26,12 +26,29 @@
 	flex-grow: 2;
 }
 
-/* Edited by tedro: */
+/* Added by tedro: */
+.taskListSubtitle{
+	margin-bottom: 25px;
+}
+.taskListDescription{
+	display: inline;
+}
+.showSearchBarIcon{
+	cursor: pointer;
+	margin: 0px 21px;
+	float: right;
+}
+.showSearchBarIcon:hover{
+	color: var(--sidebar-bg-color);
+}
 .searchBar{
-	background-color: rgba(0, 0, 0, 0.3);
+	background-color: rgba(41, 50, 73, 0.6);
 	height: 30px;
 	padding: 8px 0px;
 	border-radius: 10px;
+}
+.searchBar:hover{
+	background-color: rgba(41, 50, 73, 1.0);
 }
 .searchBarIcon{
 	margin: 0px 15px;
@@ -41,7 +58,7 @@
 	color: white;
 }
 .searchBarInput{
-	background-color: rgba(0, 0, 0, 0.45);
+	background-color: inherit;
 	color: white;
 	width: calc(100% - 70px);
 	font-size: 12pt;
@@ -50,12 +67,6 @@
 	padding-left: 7px;
 	border-radius: 5px;
 	outline: none;
-}
-.searchBarInput:hover{
-	background-color: rgba(0, 0, 0, 0.62);
-}
-.searchBarInput:focus{
-	background-color: rgba(0, 0, 0, 0.7);
 }
 
 .taskNameAndList{
@@ -176,7 +187,7 @@
 	background-color: rgba(41, 50, 73, 0.6);
 	border-radius: 10px;
 	justify-content: left;
-  	align-items: center;
+	align-items: center;
 	padding: 10px 10px;
 	margin-top: auto;
 	
