--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -47,6 +47,16 @@
     cursor: pointer;
 }
 
+.layout .sidebar .logout-button {
+    color: white;
+    display: flex;
+    flex-direction: row;
+    margin-top: 4px;
+    margin-bottom: 4px;
+    font-size: 14px;
+    cursor: pointer;
+}
+
 .layout .container {
     margin: 12px;
     width: 100%;
