--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+/*
+  To-Do Plus
+  index.css
+  @author Miroslav Safar (xsafar23)
+*/
+
 :root {
   --main-bg-color: #white;
   --sidebar-bg-color-lightest: #9ea2ad;
