Done showing how many subtasks are finished
Also added tooltips for some buttons

--- a/src/styles/taskListView.css
+++ b/src/styles/taskListView.css
@@ -108,6 +108,8 @@
 }
 
 .taskBox{
+	position: relative;
+	overflow: hidden;
 	background-color: rgba(41, 50, 73, 0.6);
 	margin-bottom: 15px;
 	width: auto;
@@ -120,6 +122,8 @@
 }
 
 .taskBoxCompleted{
+	position: relative;
+	overflow: hidden;
 	background-color: rgba(41, 50, 73, 0.6);
 	margin-bottom: 15px;
 	width: auto;
@@ -152,11 +156,11 @@
 
 .taskBoxCompleted,
 .taskBox,
-.taskButtons{
+.taskInfo{
 	margin-left: auto;
 }
 
-.taskButtons{
+.taskInfo{
 	display: flex;
 }
 
@@ -165,12 +169,14 @@
 }
 
 /* Added by tedro */
+.subtasksCompletedFraction{
+	height: 100%;
+	margin-top: 2px;
+	margin-right: 10px;
+}
 .buttonMyDay{
 	height: 100%;
-	margin-top: 1px;
 	cursor: pointer;
-	float: left;
-	left: 0;
 	margin-right: 10px;
 	padding: 5px;
 }
@@ -179,6 +185,14 @@
 	border-radius: 5px;
 }
 .buttonMyDayIcon{
+}
+.taskProgressBar{
+	background-color: green;
+	border: none;
+	position: absolute;
+	left: 0px;
+	bottom: -8px;
+	height: 5px;
 }
 
 .taskBoxCompleted  .buttonSetImportance .taskImportanceIcon,
