--- a/src/styles/homepage.css
+++ b/src/styles/homepage.css
@@ -20,3 +20,8 @@
 .taskListViewBg .titles .subtitles{
     margin-top: 100px;
 }
+
+.taskListViewBg .titles .subtitles NewTaskListButton{
+    display: flex;
+    flex-direction: row;
+}
