--- a/src/styles/settings.css
+++ b/src/styles/settings.css
@@ -15,6 +15,7 @@
 .settingsMenu{
 	position: fixed;
 	width: 60%;
+	float: left;
 	left: 20%;
 	top: 10%;
 	background-color: var(--sidebar-bg-color-darkest);
@@ -40,7 +41,6 @@
 .settingsOption{
 	margin-bottom: 25px;
 	margin-left: 15px;
-	z-index: 100;
 }
 .settingsOptionName{
 	font-size: 14pt;
