Mainly added headers to all files

--- a/src/styles/homepage.css
+++ b/src/styles/homepage.css
@@ -1,8 +1,8 @@
 /*
- * To-Do Plus
- * homepage.css
- * @author: Michaela Pařilová(xparil04)
- */
+** To-Do Plus
+** homepage.css
+** @author: Michaela Pařilová (xparil04)
+*/
 
 .taskListViewBg .titles{
     margin: 150px 150px;
