--- a/src/styles/taskDetails.css
+++ b/src/styles/taskDetails.css
@@ -1,8 +1,8 @@
 /*
- * To-Do Plus
- * taskDetails.css
- * @author: Patrik Skaloš (xskalo01)
- */
+** To-Do Plus
+** taskDetails.css
+** @author Patrik Skaloš (xskalo01)
+*/
 
 .taskDetailsMenu{
 	background-color: var(--sidebar-bg-color);
