--- a/src/styles/taskListView.css
+++ b/src/styles/taskListView.css
@@ -1,8 +1,8 @@
 /*
- * To-Do Plus
- * taskListView.css
- * @author: Michaela Pařilová(xparil04)
- */
+** To-Do Plus
+** taskListView.css
+** @author Michaela Pařilová (xparil04)
+*/
 
 .taskListViewBg{
 	background-image: url("placeholder-bg.webp");
