--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -1,7 +1,7 @@
 /*
-  To-Do Plus
-  index.css
-  @author Miroslav Safar (xsafar23)
+** To-Do Plus
+** login.css
+** @author Miroslav Safar (xsafar23)
 */
 
 .login-layout {
