Last headers, settings and taskDetails doc checked

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
-/*
-  To-Do Plus
-  index.css
-  @author Miroslav Safar (xsafar23)
+/**
+** To-Do Plus
+** index.css
+** @author Miroslav Safar (xsafar23)
 */
 
 :root {
